--- a/index.css
+++ b/index.css
@@ -225,4 +225,109 @@ button {
 
 .nav-link {
     font-weight: 500;
+    transition: background-color 0.2s;
+    border-radius: 12px;
+    padding: 4px 10px;
+}
+
+.nav-link:hover {
+    background-color: #ff9ce9;
+}
+
+.section-one {
+    margin-top: 20px;
+}
+
+.section-one-left {
+    flex: 1;
+    padding-right: 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-one-right {
+    flex: 1;
+}
+
+.content-header {
+    font-size: 1.8em;
+    font-weight: 550;
+    padding-top: 30px;
+}
+
+.content-description {
+    margin-top: 10px;
+    color: rgb(39, 39, 39);
+    line-height: 1.8rem;
+    font-size: 1.1rem;
+    text-wrap: wrap;
+}
+
+.section-two {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 80px;
+    margin-top: 20px;
+    max-width: 1024px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.title {
+    margin-top: 20px;
+    font-size: 2.3em;
+    font-weight: 600;
+    text-align: center;
+    width: 100%;
+    max-width: 702px;
+    margin-bottom: 10px;
+}
+
+.subtitle {
+    width: 100%;
+    max-width: 702px;
+    font-size: 1.4em;
+    font-weight: 400;
+    color: rgb(26, 26, 26);
+    line-height: 1.4;
+    text-align: center;
+}
+
+.section-one-image {
+    border-radius: 16px;
+    max-width: 500px;
+    width: 500px;
+    flex: 1;
+}
+
+.button-container {
+    display: flex;
+    gap: 48px;
+    padding-right: 30px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 36px;
+    width: 100%;
+}
+
+.button-highlighted {
+    border-radius: 8px;
+    background-color: black;
+    color: white;
+    padding: 8px 16px;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button {
+    border-radius: 8px;
+    border: solid 2px rgb(49, 49, 49);
+    color: rgb(32, 32, 32);
+    padding: 6px 16px;
+    margin: 2px 0px;
+    font-weight: 600;
 }
