--- a/organization.css
+++ b/organization.css
@@ -2,3 +2,17 @@
     font-weight: 600;
     font-size: 2em;
 }
+
+.email {
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-weight: 700;
+    transition: background-color 0.3s ease;
+}
+
+.email:hover {
+    background-color: rgb(240, 81, 255);
+}
